--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 }
 
 dependencies {
+    //
+
     //security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -37,6 +39,7 @@ dependencies {
     implementation 'com.github.docker-java:docker-java-transport-httpclient5:3.3.5'
     implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'
     //DB
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.31'
     //redis
